@@ -98,7 +98,7 @@ public class SimpleTCPIPServer implements Runnable {
                     catch (NoSuchElementException e) {
                         // create new one
                         if (currentHandlers.size() < maxConn) {
-                            freeHandler = (SocketHandler)handlerClass.newInstance();
+                            freeHandler = (SocketHandler)handlerClass.getDeclaredConstructor().newInstance();
                             currentHandlers.add(freeHandler);
                         }
                         else { // max handlers are created. wait for a while, then look again
