@@ -21,6 +21,10 @@
 package org.cristalise.restapi;
 
 import static org.cristalise.kernel.property.BuiltInItemProperties.NAME;
+import static org.cristalise.restapi.SystemProperties.REST_allowWeakKey;
+import static org.cristalise.restapi.SystemProperties.REST_requireLoginCookie;
+import static org.cristalise.restapi.SystemProperties.REST_Roles_withoutTimeout;
+import static org.cristalise.restapi.SystemProperties.REST_loginCookieLife;
 
 import java.io.IOException;
 import java.io.UnsupportedEncodingException;
@@ -42,7 +46,7 @@ import javax.ws.rs.core.UriInfo;
 import javax.xml.bind.DatatypeConverter;
 
 import org.apache.commons.lang3.StringUtils;
-import org.apache.shiro.crypto.AesCipherService;
+import org.apache.shiro.crypto.cipher.AesCipherService;
 import org.cristalise.kernel.common.InvalidDataException;
 import org.cristalise.kernel.common.ObjectNotFoundException;
 import org.cristalise.kernel.entity.proxy.AgentProxy;
@@ -63,18 +67,18 @@ import lombok.extern.slf4j.Slf4j;
 @Slf4j
 abstract public class RestHandler {
 
-    private ObjectMapper mapper;
+    private final ObjectMapper mapper;
     private boolean requireLogin = true;
 
-    private static Key cookieKey;
-    private static AesCipherService aesCipherService;
+    private static final Key cookieKey;
+    private static final AesCipherService aesCipherService;
 
     public static final String COOKIENAME = "cauth";
     public static final String USERNAME   = "username";
     public static final String PASSWORD   = "password";
 
     static {
-        int keySize = Gateway.getProperties().getBoolean("REST.allowWeakKey", false) ? 128 : 256;
+        int keySize = REST_allowWeakKey.getBoolean() ? 128 : 256;
 
         aesCipherService = new AesCipherService();
         cookieKey = aesCipherService.generateNewKey(keySize);
@@ -82,16 +86,16 @@ abstract public class RestHandler {
 
     public RestHandler() {
         mapper = new ObjectMapper();
-        requireLogin = Gateway.getProperties().getBoolean("REST.requireLoginCookie", true);
+        requireLogin = REST_requireLoginCookie.getBoolean();
     }
 
     /**
      * Tries to decrypt AuthData from the cookie string. It will make 5 attempts before throwing the exception.
-     * Check issue https://github.com/cristal-ise/restapi/issues/25
+     * Check github issue #25
      * 
      * @param authData the cookie string
      * @return the decypted {@link AuthData}
-     * @throws InvalidAgentPathException cookie was containing invalid uuid
+     * @throws InvalidItemPathException cookie was containing invalid uuid
      * @throws InvalidDataException Cookie too old
      */
     protected synchronized AuthData decryptAuthData(String authData)
@@ -102,7 +106,7 @@ abstract public class RestHandler {
         while(true) {
             try {
                 byte[] bytes = DatatypeConverter.parseBase64Binary(authData);
-                return new AuthData(aesCipherService.decrypt(bytes, cookieKey.getEncoded()).getBytes());
+                return new AuthData(aesCipherService.decrypt(bytes, cookieKey.getEncoded()).getClonedBytes());
             }
             catch (final Exception e) {
                 if (cntRetries == 1) {
@@ -120,8 +124,6 @@ abstract public class RestHandler {
 
     /**
      * 
-     * @param auth
-     * @return
      */
     protected synchronized String encryptAuthData(AuthData auth) {
         byte[] bytes = aesCipherService.encrypt(auth.getBytes(), cookieKey.getEncoded()).getBytes();
@@ -141,10 +143,10 @@ abstract public class RestHandler {
     }
 
     /**
-     * This method will check if authentication is 30seconds old, if true then it will return NewCookie.
+     * This method will check if authentication is 30 seconds old, if true then it will return NewCookie.
      * Return null if not.
      *
-     * @param authData
+     * @param authData the data about the agent
      * @return NewCookie
      */
     public NewCookie checkAndCreateNewCookie(AuthData authData) {
@@ -163,7 +165,7 @@ abstract public class RestHandler {
      * This method will check if authentication is 30seconds old, if true then it will return NewCookie.
      * Return null if not.
      *
-     * @param authCookie
+     * @param authCookie the cookie sent by the client
      * @return NewCookie
      */
     public NewCookie checkAndCreateNewCookie(Cookie authCookie) {
@@ -177,8 +179,7 @@ abstract public class RestHandler {
 
     public NewCookie createNewCookie(AuthData authData) {
         try {
-            NewCookie cookie = new NewCookie(COOKIENAME, encryptAuthData(authData), "/", null, null, -1, false);
-            return  cookie;
+            return new NewCookie(COOKIENAME, encryptAuthData(authData), "/", null, null, -1, false);
         } catch (Exception e) {
             log.error("Problem building response JSON", e);
             throw new WebAppExceptionBuilder("Problem building response JSON: ", e, Response.Status.INTERNAL_SERVER_ERROR, null).build();
@@ -223,8 +224,7 @@ abstract public class RestHandler {
         }
 
         try {
-            AuthData data = decryptAuthData(authData);
-            return data;
+            return decryptAuthData(authData);
         }
         catch (InvalidItemPathException | InvalidDataException e) {
             log.debug("Invalid agent or login data",  e);
@@ -244,7 +244,7 @@ abstract public class RestHandler {
      * 
      * @param agentName the name of the Agent
      * @param authCookie the cookie sent by the client
-     * @returnAgentProxy
+     * @return AgentProxy
      */
     public AgentProxy getAgent(String agentName, Cookie authCookie) throws ObjectNotFoundException {
         if(authCookie == null) return getAgent(agentName, (String)null);
@@ -363,7 +363,7 @@ abstract public class RestHandler {
 
     private boolean isUserNoTimeout ( AgentPath agent ) {
         RolePath[] roles = agent.getRoles();
-        String roleWithoutTimeout = Gateway.getProperties().getString("REST.role.withoutTimeout");
+        String roleWithoutTimeout = REST_Roles_withoutTimeout.getString();
 
         boolean userNoTimeout = false;
 
@@ -381,28 +381,27 @@ abstract public class RestHandler {
 
     /**
      * 
-     * @param ip
      */
     protected  Map<String, Object> makeItemDomainPathsData(ItemPath ip) {
         PagedResult result = Gateway.getLookup().searchAliases(ip, 0, 50);
 
-        Map<String, Object> returnVal = new LinkedHashMap<String, Object>();
-        ArrayList<Object> domainPathesData = new ArrayList<>();
+        Map<String, Object> returnMap = new LinkedHashMap<String, Object>();
+        ArrayList<Object> domainPathArray = new ArrayList<>();
 
-        for (Path p: result.rows) domainPathesData.add(p.getStringPath());
+        for (Path p: result.rows) domainPathArray.add(p.getStringPath());
 
-        if (domainPathesData.size() != 0) {
-            returnVal.put("uuid", ip.getUUID().toString());
-            returnVal.put("name", ((DomainPath)result.rows.get(0)).getName());
-            returnVal.put("domainPaths", domainPathesData);
+        if (!domainPathArray.isEmpty()) {
+            returnMap.put("uuid", ip.getUUID().toString());
+            returnMap.put("name", ((DomainPath)result.rows.getFirst()).getName());
+            returnMap.put("domainPaths", domainPathArray);
         }
         else if (ip instanceof AgentPath) {
-            returnVal.put("uuid", ip.getUUID().toString());
-            returnVal.put("name", ((AgentPath)ip).getAgentName());
-            returnVal.put("error", "Agent has no aliases");
+            returnMap.put("uuid", ip.getUUID().toString());
+            returnMap.put("name", ((AgentPath)ip).getAgentName());
+            returnMap.put("error", "Agent has no aliases");
         }
 
-        return returnVal;
+        return returnMap;
     }
 
     /**
@@ -422,7 +421,7 @@ abstract public class RestHandler {
             ByteBuffer buf = ByteBuffer.wrap(bytes);
             agent = new AgentPath(new ItemPath(new UUID(buf.getLong(), buf.getLong())));
             timestamp = new Date(buf.getLong());
-            int cookieLife = Gateway.getProperties().getInt("REST.loginCookieLife", 0);
+            int cookieLife = REST_loginCookieLife.getInteger();
 
             boolean userNoTimeout = isUserNoTimeout( this.agent );
 
